--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "auto-fix-deploy": "npm run lint:fix && git add . && git commit -m 'Auto-fixed lint and type errors' && git push origin main",
+    "host": " git add . && git commit -m 'Hosting' && git push origin main",
     "lint:fix": "eslint 'src/**/*.{js,jsx,ts,tsx}' --fix && tsc --noEmit --fix"
   },
   "dependencies": {
